--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,8 +1,13 @@
 @use 'scene';
 
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    font-family: "Sawarabi Mincho", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 18px;
+    background: #1c1c1c; /* Cor de fundo base */
+    background: linear-gradient(to bottom, #1c1c1c, #0d0d0d); /* Gradiente suave */
+    color: #edfdff;
     h1 {
         color: red;
     }
