--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5,8 +5,7 @@ body {
     font-weight: 400;
     font-style: normal;
     font-size: 18px;
-    background: #1c1c1c; /* Cor de fundo base */
-    background: linear-gradient(to bottom, #1c1c1c, #0d0d0d); /* Gradiente suave */
+    background: #1c1c1c; 
     color: #edfdff;
     h1 {
         color: red;
