--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,20 +1,42 @@
-@use 'scene';
+@import 'start-screen';
+@import 'challenge';
+@import 'subscene';
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body {
     font-family: "Sawarabi Mincho", serif;
     font-weight: 400;
     font-style: normal;
     font-size: 18px;
-    background: #1c1c1c; 
+    background: #1c1c1c;
     color: #edfdff;
-    h1 {
-        color: red;
-    }
 }
 
+#app {
+    display: none;
+}
 
+#life {
+    display: none;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 14px;
+}
 
+@media (max-width: 600px) {
+    body {
+        padding: 10px;
+    }
 
-
-
-
+    #life {
+        font-size: 11px;
+    }
+}
