remove score panel from victory and gameover screen

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -24,6 +24,10 @@ body {
     display: none;
 }
 
+.hidden {
+    display: none;
+}
+
 @media (max-width: 600px) {
     body {
         padding: 10px;
