--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -28,6 +28,23 @@ body {
     display: none;
 }
 
+.feedback {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.95);
+    z-index: 100;
+    font-size: 24px;
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+}
+
 @media (max-width: 600px) {
     body {
         padding: 10px;
