--- a/src/styles/challenge.scss
+++ b/src/styles/challenge.scss
@@ -33,6 +33,10 @@
         text-align: center;
         padding: 15px 8px;
         color: #edfdff;
+
+        p {
+            margin-bottom: 10px;
+        }
     }
     
     &__img {
@@ -40,6 +44,13 @@
         height: auto;
         margin: 5px 0;
         border-radius: 15px;
+    }
+
+    &__hints {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: 20px 0;
     }
     
     &__list {
