--- a/docs/style.css
+++ b/docs/style.css
@@ -153,6 +153,29 @@
   justify-content: center;
   margin: 20px 0;
 }
+.challenge__checkbox {
+  display: none;
+}
+.challenge__hints {
+  display: none;
+}
+.challenge__checkbox:checked + .challenge__reveal-hint + .challenge__hints {
+  display: block;
+}
+.challenge__reveal-hint {
+  display: block;
+  margin: 10px auto;
+  padding: 10px 20px;
+  background-color: #1c2f66;
+  color: #edfdff;
+  border: 2px solid #5374d4;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+.challenge__reveal-hint:hover {
+  background-color: #0c1a46;
+}
 .challenge__list {
   list-style: none;
   padding: 0;
